tests/build/widget_new/no_default_when_assigned1.stderr
error: property `my_property` is not assigned and has no default value
  --> $DIR/no_default_when_assigned1.rs:15:13
   |
15 |             my_property = 20
   |             ^^^^^^^^^^^
